# mvsdk-rs

./: .cargo_vcs_info.json  Cargo.toml  README.md  build.rs
c-include/: CameraApi.h  CameraDefine.h  CameraStatus.h
src/: camera.rs  lib.rs
src/camera/: c_bindings.rs  capture.rs  constants.rs  helpers.rs  info.rs  settings.rs  status.rs
